--- a/css/site.css
+++ b/css/site.css
@@ -229,3 +229,6 @@ html,
 .slide-overlay.active-slide, .slide-mobile-overlay.active-slide {
     visibility: visible;
 }
+.bx-wrapper .bx-pager {
+    bottom: 30px !important;
+}
