--- a/css/product.css
+++ b/css/product.css
@@ -33,7 +33,7 @@
     height: 30px;
 }
 .main-container .product .description .info a {
-    padding: 10px;
+    padding: 12px 18px;
     margin-top: 30px;
     color: white;
     background: #E50000;
