--- a/css/site.css
+++ b/css/site.css
@@ -115,8 +115,8 @@ html,
             }
             .hero-text .title p {
                 font-weight: 600;
-                font-size: 56px;
-                line-height: 72px;
+                font-size:32px;
+                line-height: 40px;
                 padding: 0 20px;
             }
             .hero-text .description {
@@ -223,10 +223,12 @@ html,
 .bx-prev {
     background: url("../assets/ic-left.svg") !important;
     background-size: contain !important;
+    top: 40% !important;
 }
 .bx-next {
     background: url("../assets/ic-right.svg") !important;
     background-size: contain !important;
+    top: 40% !important;
 }
 .slide-overlay, .slide-mobile-overlay {
     opacity: 0;
