--- a/css/product.css
+++ b/css/product.css
@@ -8,9 +8,10 @@
     float: right;
     width: 100%;
     max-width: 700px;
+    margin: 0;
 }
 .main-container .product .description {
-    margin-top: 60px;
+    margin: 60px 0 0 0;
 }
 .main-container .product .description .info .title {
     font-weight: 600;
@@ -57,6 +58,7 @@
     }
     .main-container .row .image img {
         width: auto;
+        margin: 0 60px;
     }
     .main-container .row:nth-child(even) > .image .background1 {
         right: -210px;
