--- a/css/variable.css
+++ b/css/variable.css
@@ -4,4 +4,6 @@
     --background-slider: #CEEEEA32;
     --text-light: #5F5F5F;
     --black: #353535;
+    --red: #E50000;
+    --gray: #BABABA;
 }
