--- a/css/product.css
+++ b/css/product.css
@@ -8,10 +8,9 @@
     float: right;
     width: 100%;
     max-width: 700px;
-    margin: 0;
 }
 .main-container .product .description {
-    margin: 60px 0 0 0;
+    margin-top: 60px;
 }
 .main-container .product .description .info .title {
     font-weight: 600;
@@ -28,9 +27,24 @@
 .main-container .product .description .info .item:last-child {
     margin-top: 30px;
 }
-.main-container .product .description .info .item img {
+.main-container .product .description .info .item .icon img {
     width: 30px;
     height: 30px;
+}
+.main-container .product .description .info .item {
+    display: -ms-flex; display: -webkit-flex; display: flex;
+}
+.main-container .product .description .info .item .icon {
+    flex: 0;
+    align-items: center;
+    display: flex;
+}
+.main-container .product .description .info .item .icon, .main-container .product .description .info .item .text {
+    margin: 0 5px;
+}
+.main-container .product .description .info .item .text {
+    margin-top: 5px;
+    flex: 10;
 }
 .main-container .product .description .info a {
     padding: 12px 18px;
@@ -73,3 +87,4 @@
         right: 50%;
     }
 }
+
