--- a/css/site.css
+++ b/css/site.css
@@ -204,6 +204,7 @@ html,
     top: 0;
     width: 100%;
     background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     z-index: 999999999;
 }
 .scroll-to-top {
