--- a/css/site.css
+++ b/css/site.css
@@ -105,10 +105,10 @@ html,
             border: none !important;
             box-shadow: none !important;
         }
-            @media (min-width: 1360px) {
-                /*.container {*/
-                /*    width: 1360px !important;*/
-                /*}*/
+            @media (max-width: 1360px) {
+                .web-contain {
+                    overflow-x: hidden;
+                }
             }
             .hero-image {
                 background-image: url("../assets/logo2.svg");
