--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,6 @@
 footer {
     background-color: #E8F4F2;
     padding-top: calc(28% + 120px);
-    width: 100vw;
-    text-align: center;
-    margin-left: calc(-50vw + 680px);
 }
 footer .logo {
 }
@@ -44,9 +41,16 @@ footer .info .item a:hover {
 @media (min-width: 1360px) {
     footer {
         padding-top: 360px;
+        width: 100vw;
+        text-align: center;
+        margin-left: calc(-50vw + 680px);
     }
     footer .container {
         width: 1360px;
+    }
+    .copy-right {
+        width: 100vw;
+        margin-left: calc(-50vw + 680px);
     }
 }
 .copy-right {
@@ -56,8 +60,6 @@ footer .info .item a:hover {
     font-size: 10px;
     line-height: 30px;
     color: white;
-    width: 100vw;
-    margin-left: calc(-50vw + 680px);
 }
 footer .footer-logo, .social-icons {
     text-align: center;
