--- a/css/site.css
+++ b/css/site.css
@@ -202,7 +202,7 @@ html,
 .sticky {
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     z-index: 999999999;
@@ -217,7 +217,7 @@ html,
 .fix-end {
     position: fixed;
     bottom: 15px;
-    right: 15px;
+    left: calc(100vw - 50px);
     display: block;
 }
 @media screen and (max-width: 1400px) {
